[gd_scene load_steps=12 format=2]

[ext_resource path="res://frontend/StartScreen/Menu background.tscn" type="PackedScene" id=1]
[ext_resource path="res://frontend/GUI/InputDevicesList.tscn" type="PackedScene" id=2]
[ext_resource path="res://frontend/speech_interface/Record.tscn" type="PackedScene" id=3]
[ext_resource path="res://frontend/GUI/Red-dot.tscn" type="PackedScene" id=4]
[ext_resource path="res://backend/talk_interactions/stt/Speech_to_text.tscn" type="PackedScene" id=5]
[ext_resource path="res://frontend/StartScreen/Start Screen.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/Pixel font.tres" type="Theme" id=7]
[ext_resource path="res://assets/sfx/correct.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/flags/Esp.png" type="Texture" id=9]
[ext_resource path="res://backend/talk_interactions/translator/TranslatorHelper.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/flags/Ing.png" type="Texture" id=11]

[node name="StartScreen" type="Control"]
script = ExtResource( 6 )

[node name="MenuBackground" parent="." instance=ExtResource( 1 )]
z_index = -1

[node name="Stt" parent="." instance=ExtResource( 5 )]

[node name="Record" parent="." instance=ExtResource( 3 )]

[node name="LanguageSelector" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1186.0
margin_bottom = 673.0
rect_scale = Vector2( 0.863912, 0.996476 )
mouse_filter = 2
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="LanguageSelector"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1066.0
margin_bottom = 593.0
mouse_filter = 2
custom_constants/separation = 16

[node name="Title" type="Label" parent="LanguageSelector/VBoxContainer"]
margin_right = 946.0
margin_bottom = 23.0
theme = ExtResource( 7 )
custom_constants/shadow_offset_x = 0
text = "SoulSeek"
align = 1

[node name="Explanation" type="Label" parent="LanguageSelector/VBoxContainer"]
margin_top = 39.0
margin_right = 946.0
margin_bottom = 88.0
theme = ExtResource( 7 )
text = "Selecciona un idioma  /  Select a language
"
align = 1
autowrap = true

[node name="Explanation2" type="Label" parent="LanguageSelector/VBoxContainer"]
margin_top = 104.0
margin_right = 946.0
margin_bottom = 127.0
theme = ExtResource( 7 )
text = " - Para continuar presiona la tecla 'N'"
align = 1
autowrap = true

[node name="EnFlag" type="Sprite" parent="LanguageSelector/VBoxContainer"]
position = Vector2( 623.131, 182.926 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 11 )

[node name="EnFlagArea" type="Area2D" parent="LanguageSelector/VBoxContainer/EnFlag"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LanguageSelector/VBoxContainer/EnFlag/EnFlagArea"]
z_index = 2
polygon = PoolVector2Array( -347.254, -401.41, -347.254, 313.61, 358.836, 313.61, 347.261, -401.41 )

[node name="EsFlag" type="Sprite" parent="LanguageSelector/VBoxContainer"]
position = Vector2( 335.808, 181.365 )
scale = Vector2( 0.0977474, 0.0788865 )
texture = ExtResource( 9 )

[node name="EsFlagArea" type="Area2D" parent="LanguageSelector/VBoxContainer/EsFlag"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LanguageSelector/VBoxContainer/EsFlag/EsFlagArea"]
position = Vector2( 9.94342, 1.16699 )
scale = Vector2( 0.981991, 0.997686 )
z_index = 2
polygon = PoolVector2Array( -357.165, -376.596, -345.106, 286.445, 347.262, 301.067, 335.687, -376.32 )

[node name="MicSelector" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1186.0
margin_bottom = 673.0
rect_scale = Vector2( 0.863912, 0.996476 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="MicSelector"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1066.0
margin_bottom = 593.0
custom_constants/separation = 16

[node name="Intro text" type="Label" parent="MicSelector/VBoxContainer"]
margin_right = 946.0
margin_bottom = 75.0
theme = ExtResource( 7 )
text = "SoulSeek es un juego que se basa en el uso del  habla
del jugador, por ello es importante que cuentes con un micrófono para poder jugar.
Seleccione de la lista de abajo el micrófono que quiera utilizar"
align = 1
valign = 1

[node name="InputDevicesList" parent="MicSelector/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 91.0
margin_right = 946.0
margin_bottom = 111.0

[node name="Instruction" type="Label" parent="MicSelector/VBoxContainer"]
margin_top = 127.0
margin_right = 946.0
margin_bottom = 150.0
theme = ExtResource( 7 )
text = " - Una vez seleccionado el microfono presiona la tecla N"
align = 1
autowrap = true

[node name="MicWorking" type="Label" parent="MicSelector/VBoxContainer"]
visible = false
margin_top = 166.0
margin_right = 946.0
margin_bottom = 189.0
theme = ExtResource( 7 )
text = "El microfono esta funcionando"
align = 1
autowrap = true

[node name="MicNotWorking" type="Label" parent="MicSelector/VBoxContainer"]
visible = false
margin_top = 205.0
margin_right = 946.0
margin_bottom = 228.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.960784, 0.486275, 0.486275, 1 )
text = "El microfono no funciona, prueba hablar de nuevo o con otro microfono"
align = 1
autowrap = true

[node name="MicTester" type="Label" parent="MicSelector/VBoxContainer"]
visible = false
margin_top = 205.0
margin_right = 946.0
margin_bottom = 280.0
theme = ExtResource( 7 )
text = "Vamos a probar el microfono.

Presiona una vez la tecla CONTROL"
align = 1
autowrap = true

[node name="MicTester2" type="Label" parent="MicSelector/VBoxContainer"]
visible = false
margin_top = 205.0
margin_right = 946.0
margin_bottom = 306.0
theme = ExtResource( 7 )
text = "
Habla  

Luego presiona CONTROL de nuevo"
align = 1
autowrap = true

[node name="MicTester3" type="Label" parent="MicSelector/VBoxContainer"]
visible = false
margin_top = 205.0
margin_right = 946.0
margin_bottom = 228.0
theme = ExtResource( 7 )
text = "Cuando quieras avanza diciendo la palabra CONTINUAR"
align = 1
autowrap = true

[node name="ApiKey" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1186.0
margin_bottom = 673.0
rect_scale = Vector2( 0.863912, 0.996476 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="ApiKey"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1066.0
margin_bottom = 593.0
custom_constants/separation = 16

[node name="Intro text" type="Label" parent="ApiKey/VBoxContainer"]
margin_right = 946.0
margin_bottom = 49.0
theme = ExtResource( 7 )
text = "Haremos uso de la herramienta GPT-3 de OpenAI
Tendras que crear una cuenta para generar tu propia API-Key"
align = 1
valign = 1

[node name="Title2" type="Label" parent="ApiKey/VBoxContainer"]
margin_top = 65.0
margin_right = 946.0
margin_bottom = 88.0
theme = ExtResource( 7 )
custom_constants/shadow_offset_x = 0
text = "A continuación ingrese su API key generada en: https://beta.openai.com/ y oprima la tecla \"Enter\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="ApiKey/VBoxContainer"]
margin_top = 104.0
margin_right = 946.0
margin_bottom = 128.0
secret = true

[node name="WrongApiKey" type="Label" parent="ApiKey/VBoxContainer"]
visible = false
margin_top = 144.0
margin_right = 946.0
margin_bottom = 167.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.972549, 0.443137, 0.443137, 1 )
custom_constants/shadow_offset_x = 0
text = "Fallo la Api-Key, prueba ingresarla de nuevo."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu2" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = 1191.0
margin_bottom = 601.0
rect_scale = Vector2( 0.863912, 0.996476 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu2"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1072.0
margin_bottom = 522.0
custom_constants/separation = 16

[node name="Intro text" type="Label" parent="Menu2/VBoxContainer2"]
margin_right = 952.0
margin_bottom = 23.0
theme = ExtResource( 7 )
text = "Ultimos Controles"
align = 1
valign = 1

[node name="Explanation" type="Label" parent="Menu2/VBoxContainer2"]
margin_top = 39.0
margin_right = 952.0
margin_bottom = 218.0
theme = ExtResource( 7 )
text = " - La tecla \"Q\" se utiliza para enviar preguntas
-La tecla \"A\" o \"ENTER\" se utiliza para enviar respuestas.
 
 - Para pasar a la siguiente pantalla debes decir en voz alta y clara \"COMENZAR JUEGO\"

-Y luego presionar la letra \"Enter\"
"
align = 1
autowrap = true

[node name="GameIntroduction" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1186.0
margin_bottom = 673.0
rect_scale = Vector2( 0.863912, 0.996476 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameIntroduction"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1066.0
margin_bottom = 593.0
custom_constants/separation = 16

[node name="Title" type="Label" parent="GameIntroduction/VBoxContainer"]
margin_right = 946.0
margin_bottom = 23.0
theme = ExtResource( 7 )
text = "SoulSeek"
align = 1

[node name="Intro text" type="Label" parent="GameIntroduction/VBoxContainer"]
margin_top = 39.0
margin_right = 946.0
margin_bottom = 88.0
theme = ExtResource( 7 )
text = "Has pensado en tener una conversacion con un personaje de un videojuego? 
Que te gustaria saber de ellos? Crees que pueden responder todas tus dudas?"
align = 1
valign = 1

[node name="Explanation" type="Label" parent="GameIntroduction/VBoxContainer"]
margin_top = 104.0
margin_right = 946.0
margin_bottom = 231.0
theme = ExtResource( 7 )
text = "Imagina que sos un viajante en un mundo donde el motor a vapor es la maxima tecnologia. 
Llegas a la casa de la familia Smith que te aloja una noche por unas monedas.


Presiona la tecla \"A\" para continuar"
align = 1
autowrap = true

[node name="Rec" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 976, 552 )
animation = "default"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.273
bus = "SFx"

[node name="PopUp" type="PopupDialog" parent="."]
margin_left = 841.0
margin_top = 15.0
margin_right = 1007.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PopUp"]
margin_left = 16.9513
margin_top = 19.0703
margin_right = 151.951
margin_bottom = 56.0703
text = "API key no detectada"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslatorHelper" parent="." instance=ExtResource( 10 )]

[connection signal="input_event" from="LanguageSelector/VBoxContainer/EnFlag/EnFlagArea" to="." method="_on_EnFlagArea_input_event"]
[connection signal="input_event" from="LanguageSelector/VBoxContainer/EsFlag/EsFlagArea" to="." method="_on_EsFlagArea_input_event"]
[connection signal="text_entered" from="ApiKey/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
